# Presentazioni

./: Cargo.toml  README.md
output/: beta.html  how_does_it_work.html  import.html  inspiration.html  prova.html
output/assets/: chat-gpt.md  comment.js  content_manager.js  decorations.js  main.css  main.js  navigation.js  slide.js
output/assets/lib/: content_manager.js  decoration.js  observable.js  panel.js
source/: beta.md  how_does_it_work.md  import.md  inspiration.md  prova.md
src/: main.rs  to_html.rs
