[package]
name = "Presentazioni"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pulldown-cmark = "0.9.3"
actix-web = "4.4.1"
notify = "6.1.1"
notify-debouncer-mini = "0.4.1"
tokio = { version = "1", features = ["full"] }
regex = "1.10.3"
